@@ -224,6 +224,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+pdf: Slipher1913.pdf
 @ARTICLE{Slipher1913lobAndromedaRarialVelocity,
        author = {{Slipher}, V.~M.},
         title = "{The radial velocity of the Andromeda Nebula}",
